--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: "3.8"
 services:
+  # MySQL Database
   tttn-db:
     image: mysql
     container_name: tttn-db
@@ -9,9 +10,26 @@ services:
       MYSQL_DATABASE: tttn
       MYSQL_ROOT_PASSWORD: root
 
+  # Redis Stack
   redis-stack:
     image: redis/redis-stack:latest
     container_name: redis-stack-local
     ports:
       - "6379:6379"
       - "8001:8001"
+
+  # Spring Boot App
+  spring-app:
+    image: iamtdf/lawbot:latest
+    container_name: spring-app
+    ports:
+      - "8080:8080"
+    depends_on:
+      - tttn-db
+      - redis-stack
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://tttn-db:3306/tttn
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_REDIS_HOST: redis-stack
+      SPRING_REDIS_PORT: 6379
