--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,11 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_KEY }}
       - name: Deploy to Server
         run: |
-          ssh -o StrictHostKeyChecking=no root@${{ secrets.IP }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no root@${{ secrets.IP }} << EOF
             cd lawbot
             git fetch --all
             git reset --hard origin/master
-            tmux ls | cut -d: -f1 | xargs -r -n1 tmux kill-session -t
-
-            export RAG_HOST=${secrets.RAG_HOST}
-            tmux new -d -s springapp "mvn spring-boot:run"
+            tmux ls 2>/dev/null | cut -d: -f1 | xargs -r -n1 tmux kill-session -t
+          
+            tmux new -d -s springapp "RAG_HOST=${{ secrets.RAG_HOST }} mvn spring-boot:run"
           EOF
